<resources>
    <string name="app_name">SmartNotes</string>
    <string name="sign_up">SIGN UP</string>
    <string name="mail_address">  Mail Address</string>
    <string name="password">  Password</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_profile">CREATE PROFILE</string>
    <string name="name">Name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="surname">Surname:</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="e_mail">E-mail:</string>
    <string name="email_address">Email Address</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="dies">###</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="post">Post</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="add_post">Add Post</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title:</string>
    <string name="newpost">Post :</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="follow_button">Follow Button</string>
    <string name="no_button">No Button</string>
    <string name="no">No</string>
    <string name="yes_button">Yes Button</string>
    <string name="yes">Yes</string>
    <string name="search_query">Search Query</string>
    <string name="search_button">Search Button</string>
    <string name="follow">Follow</string>
    <string name="next">Next</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="password_">Password:</string>
    <string name="following">following</string>
</resources>