<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <EditText
            android:id="@+id/SignUpMail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/mail_address"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/SignUpPass"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@drawable/custom_button"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/AlreadyMember"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/already_a_member"
            android:onClick="navigate_sign_in"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/black"/>
    </TableLayout>
</ScrollView>