<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="SmartNotes"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            />
        <EditText
            android:id="@+id/SignInMail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/mail_address"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/SignInPass"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/SignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@drawable/custom_button"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/notamember"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:clickable="true"
            android:onClick="NavigateSignUp"
            android:gravity="center"
            android:textColor="@color/black"/>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>