<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="1sp">

        <EditText
            android:id="@+id/search_query"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:width="0dp"
            android:autofillHints=""
            android:background="@drawable/border"
            android:maxLines="1"
            android:textCursorDrawable="@color/black"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:hint="@string/search_query"/>

        <ImageButton
            android:id="@+id/search_image_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_baseline_search_24_black"
            android:background="@color/white"
            android:contentDescription="@string/search_button"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/follow_LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/tag_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_gravity="center"
            android:gravity="center"/>
        <Button
            android:id="@+id/follow_button_in_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/follow"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_users_post_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>