<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPost"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp" />

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:maxLines="1"
        android:textCursorDrawable="@color/black"
        android:autofillHints="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tag :"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp" />
    <EditText
        android:id="@+id/edit_text_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:inputType="text"
        android:textCursorDrawable="@color/black">
    </EditText>

    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newpost"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp" />
        <EditText
            android:id="@+id/edit_text_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:background="@drawable/border"
            android:lines="5"
            android:maxLines="10"
            android:inputType="textMultiLine"
            android:textCursorDrawable="@color/black">
        </EditText>

    <Space
        android:layout_width="match_parent"
        android:layout_height="3dp" />
    <Button
        android:id="@+id/edit_text_post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        />

</LinearLayout>